# FireRedASR2S

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
fireredasr2s/: fireredasr2system.py
fireredasr2s/fireredpunc/: punc.py
