[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fireredasr2s"
version = "0.0.1"
description = "Industrial-grade ASR system with VAD, LID, and punctuation prediction"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.30",
    "numpy>=1.21",
    "cn2an>=0.5.0",
    "kaldiio>=2.18.0",
    "kaldi_native_fbank>=1.0",
    "sentencepiece>=0.2.0",
    "soundfile>=0.12.0",
    "textgrid>=1.5",
]

[project.scripts]
fireredasr2s-cli = "fireredasr2s.fireredasr2s_cli:cli_main"

[tool.setuptools.packages.find]
include = ["fireredasr2s*"]
